разобралась со стилями + фиксы

--- a/templates/brand.html
+++ b/templates/brand.html
@@ -67,7 +67,7 @@
 				</div>	
 			</div>
 			<div class="right-content">
-				<div class="bn sh"><img src="images/upload/bn.png" alt=""/></div>
+				<div class="bn sh"><img src="static/images/upload/bn.png" alt=""/></div>
 
 				<h1>Лучшее из Royal Canin</h1>
 
@@ -79,7 +79,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">OZ-Pet</a></div>
 								<div class="catalog-item-title"><a href="">Корм универсальный для собак</a></div>
@@ -117,7 +117,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -155,7 +155,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -217,7 +217,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">OZ-Pet</a></div>
 								<div class="catalog-item-title"><a href="">Корм универсальный для собак</a></div>
@@ -255,7 +255,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -293,7 +293,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -331,7 +331,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c3.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c3.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -369,7 +369,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -407,7 +407,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -445,7 +445,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -483,7 +483,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c3.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c3.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -521,7 +521,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
