--- a/templates/card.html
+++ b/templates/card.html
@@ -15,11 +15,11 @@
 					<div class="card-photo-block">
 						<div class="bxslider-photo-border">
 							<div class="bxslider-photo">
-								<div class="photo-slide"><img src="images/upload/p1.jpg" alt=""/></div>
-								<div class="photo-slide"><img src="images/upload/p2.jpg" alt=""/></div>
-								<div class="photo-slide"><img src="images/upload/c1.jpg" alt=""/></div>
-								<div class="photo-slide"><img src="images/upload/c2.jpg" alt=""/></div>
-								<div class="photo-slide"><img src="images/upload/c3.jpg" alt=""/></div>
+								<div class="photo-slide"><img src="static/images/upload/p1.jpg" alt=""/></div>
+								<div class="photo-slide"><img src="static/images/upload/p2.jpg" alt=""/></div>
+								<div class="photo-slide"><img src="static/images/upload/c1.jpg" alt=""/></div>
+								<div class="photo-slide"><img src="static/images/upload/c2.jpg" alt=""/></div>
+								<div class="photo-slide"><img src="static/images/upload/c3.jpg" alt=""/></div>
 							</div>
 							<div class="bx-arrow-left"></div>
 							<div class="bx-arrow-right"></div>
@@ -28,27 +28,27 @@
 							<div id="bxpager">
 								<a href="" class="bxpager b0" data-slide-index="0">
 									<span class="bxpager-inner">
-										<img src="images/upload/p1-small.jpg" alt=""/>
+										<img src="static/images/upload/p1-small.jpg" alt=""/>
 									</span>
 								</a>
 								<a href="" class="bxpager b1" data-slide-index="1">
 									<span class="bxpager-inner">
-										<img src="images/upload/p2.jpg" alt=""/>
+										<img src="static/images/upload/p2.jpg" alt=""/>
 									</span>
 								</a>
 								<a href="" class="bxpager b2" data-slide-index="2">
 									<span class="bxpager-inner">
-										<img src="images/upload/c1.jpg" alt=""/>
+										<img src="static/images/upload/c1.jpg" alt=""/>
 									</span>
 								</a>
 								<a href="" class="bxpager b3" data-slide-index="3">
 									<span class="bxpager-inner">
-										<img src="images/upload/c2.jpg" alt=""/>
+										<img src="static/images/upload/c2.jpg" alt=""/>
 									</span>
 								</a>
 								<a href="" class="bxpager b4" data-slide-index="4">
 									<span class="bxpager-inner">
-										<img src="images/upload/c3.jpg" alt=""/>
+										<img src="static/images/upload/c3.jpg" alt=""/>
 									</span>
 								</a>
 							</div>
@@ -93,9 +93,9 @@
 							<a href="" class="c-delivery">Бесплатная доставка по Москве</a>
 							<div class="fs11-grey">при заказе от 999 руб!</div>
 						</div>
-						<a href="" class="card-service-item"><img src="images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span></a>
-						<a href="" class="card-service-item"><img src="images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Поделиться</span></a>
-						<a href="" class="card-service-item"><img src="images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Чат с менеджером</span></a>
+						<a href="" class="card-service-item"><img src="static/images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span></a>
+						<a href="" class="card-service-item"><img src="static/images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Поделиться</span></a>
+						<a href="" class="card-service-item"><img src="static/images/ico/fav.png" class="card-service-ico"/><span class="card-service-txt">Чат с менеджером</span></a>
 					</div>
 				</div>
 			</div>
