--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -50,46 +50,46 @@
 					</div>
 				</div>
 				<ul class="catalog-list">
-					<li><a href="filter.html" class="catalog-list-link">Корма</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Здоровье</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Гигиена и уборка</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Уход</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Лежаки, домики</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Ошейники, поводки</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Одежда, обувь, аксессуары</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Игрушки</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Транспортировка</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Ступеньки</a></li>
-					<li><a href="filter.html" class="catalog-list-link">Миски</a></li>
+					<li><a href="filter.html" class="inner-border">Корма</a></li>
+					<li><a href="filter.html" class="inner-border">Здоровье</a></li>
+					<li><a href="filter.html" class="inner-border">Гигиена и уборка</a></li>
+					<li><a href="filter.html" class="inner-border">Уход</a></li>
+					<li><a href="filter.html" class="inner-border">Лежаки, домики</a></li>
+					<li><a href="filter.html" class="inner-border">Ошейники, поводки</a></li>
+					<li><a href="filter.html" class="inner-border">Одежда, обувь, аксессуары</a></li>
+					<li><a href="filter.html" class="inner-border">Игрушки</a></li>
+					<li><a href="filter.html" class="inner-border">Транспортировка</a></li>
+					<li><a href="filter.html" class="inner-border">Ступеньки</a></li>
+					<li><a href="filter.html" class="inner-border">Миски</a></li>
 				</ul>
 			</div>
 
 			<div class="filter-cont sh">
 				<div class="catalog-title">Популярные бренды</div>
 				<ul class="catalog-list mb0">
-					<li><a href="brand.html" class="catalog-list-link">Acana</a></li>
-					<li><a href="brand.html" class="catalog-list-link">Dr. Clauder`s</a></li>
-					<li><a href="brand.html" class="catalog-list-link">Happy Dog</a></li>
-					<li><a href="brand.html" class="catalog-list-link">Pedigree</a></li>
-					<li><a href="brand.html" class="catalog-list-link">Royal Canin</a></li>
+					<li><a href="brand.html" class="inner-border">Acana</a></li>
+					<li><a href="brand.html" class="inner-border">Dr. Clauder`s</a></li>
+					<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
+					<li><a href="brand.html" class="inner-border">Pedigree</a></li>
+					<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
 				</ul>
 				<div class="brand-more">
 					<ul class="catalog-list">
-						<li><a href="brand.html" class="catalog-list-link">New brand 1</a></li>
-						<li><a href="brand.html" class="catalog-list-link">New brand 2</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Happy Dog</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Pedigree</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Royal Canin</a></li>
-						<li><a href="brand.html" class="catalog-list-link">New brand 1</a></li>
-						<li><a href="brand.html" class="catalog-list-link">New brand 2</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Happy Dog</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Pedigree</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Royal Canin</a></li>
-						<li><a href="brand.html" class="catalog-list-link">New brand 1</a></li>
-						<li><a href="brand.html" class="catalog-list-link">New brand 2</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Happy Dog</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Pedigree</a></li>
-						<li><a href="brand.html" class="catalog-list-link">Royal Canin</a></li>
+						<li><a href="brand.html" class="inner-border">New brand 1</a></li>
+						<li><a href="brand.html" class="inner-border">New brand 2</a></li>
+						<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
+						<li><a href="brand.html" class="inner-border">Pedigree</a></li>
+						<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
+						<li><a href="brand.html" class="inner-border">New brand 1</a></li>
+						<li><a href="brand.html" class="inner-border">New brand 2</a></li>
+						<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
+						<li><a href="brand.html" class="inner-border">Pedigree</a></li>
+						<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
+						<li><a href="brand.html" class="inner-border">New brand 1</a></li>
+						<li><a href="brand.html" class="inner-border">New brand 2</a></li>
+						<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
+						<li><a href="brand.html" class="inner-border">Pedigree</a></li>
+						<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
 					</ul>
 					<div class="brand-btn-cont">
 						<a href="" class="btn btn-block" data-originaltxt="Все бренды (92)">Все бренды (92)</a>
