--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -45,7 +45,7 @@
 					<div class="small-section">
 						<div class="section-title">
 							<span class="section-title-txt">Все для</span>
-							<img class="title-ico" alt="" src="images/ico/dog2.png">
+							<img class="title-ico" alt="" src="static/images/ico/dog2.png">
 							<span class="section-title-txt right">собак</span>
 						</div>
 					</div>
@@ -80,7 +80,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">OZ-Pet</a></div>
 								<div class="catalog-item-title"><a href="">Корм универсальный для собак</a></div>
@@ -118,7 +118,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -156,7 +156,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -203,7 +203,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">OZ-Pet</a></div>
 								<div class="catalog-item-title"><a href="">Корм универсиальный для собак</a></div>
@@ -241,7 +241,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -279,7 +279,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -319,7 +319,7 @@
 
 					Представители этой породы отлично подходят для <a href="">охоты на зайца</a> и другого мелкого зверя, они очень азартны, выносливы и обладают крепким здоровьем. Этим собакам не страшны никакие капризы погоды. Но несмотря на то, что они легко адаптируются к любым условиям и неприхотливы к пище, для содержания в городской квартире малые аппенинские гончие не приспособлены, им нужны большие физические нагрузки и долгие прогулки. Также очень важно общение с людьми, особенно с хозяином.<br/><br/>
 
-					<img src="images/upload/mal.jpg" alt="" style="float: right; margin: 10px 0 20px 30px;"/>
+					<img src="static/images/upload/mal.jpg" alt="" style="float: right; margin: 10px 0 20px 30px;"/>
 
 					Внешний вид малой аппенинской гончей больше всего напоминает итальянского сегуджо. Это мощные собаки со средней длинны шеей, глубокой и широкой грудью, а также довольно короткими, но сильными конечностями. Хвост довольно длинный, тонкий.<br/><br/>
 
@@ -339,14 +339,14 @@
 
 					<div class="float-cont">
 						<div class="blog-short-item w300">
-							<a href="" class="blog-short-img"><img src="images/upload/b1.jpg" alt=""/></a>
+							<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
 							<div class="blog-short-date">15 декабря 2015</div>
 							<div class="blog-short-title"><a href="">Выбираем корм для щенка</a></div>
 							<div class="blog-short-txt">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
 						</div>
 
 						<div class="blog-short-item w300">
-							<a href="" class="blog-short-img"><img src="images/upload/b1.jpg" alt=""/></a>
+							<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
 							<div class="blog-short-date">15 декабря 2015</div>
 							<div class="blog-short-title"><a href="">Дрессировка собаки - с какого возраста начать...</a></div>
 							<div class="blog-short-txt">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
