--- a/templates/filter.html
+++ b/templates/filter.html
@@ -56,9 +56,9 @@
 				<div class="filter-block opened default-opened">
 					<div class="filter-title">Тип корма:<span class="filter-title-arrow"></span></div>
 					<ul class="filter-content">
-						<li>Сухие корма<span class="super-txt">(159)</span></li>
-						<li>Консервы<span class="super-txt">(81)</span></li>
-						<li>Лакомства<span class="super-txt">(34)</span></li>
+						<li class="filter-option"><div class="inner-border">Сухие корма<span class="super-txt">(159)</span></div></li>
+						<li class="filter-option"><div class="inner-border">Консервы<span class="super-txt">(81)</span></div></li>
+						<li class="filter-option"><div class="inner-border">Лакомства<span class="super-txt">(34)</span></div></li>
 					</ul>
 				</div>
 				<div class="filter-block opened default-opened">
@@ -82,9 +82,9 @@
 				<div class="filter-block">
 					<div class="filter-title">Возраст:<span class="filter-title-arrow"></span></div>
 					<ul class="filter-content">
-						<li>Щенок<span class="super-txt">(159)</span></li>
-						<li>Взрослая собака<span class="super-txt">(81)</span></li>
-						<li>Старая собака<span class="super-txt">(34)</span></li>
+						<li class="filter-option"><div class="inner-border">Щенок<span class="super-txt">(159)</span></div></li>
+						<li class="filter-option"><div class="inner-border">Взрослая собака<span class="super-txt">(81)</span></div></li>
+						<li class="filter-option"><div class="inner-border">Старая собака<span class="super-txt">(34)</span></div></li>
 					</ul>
 				</div>
 				<div class="filter-btn">
