--- a/templates/includes/_header_login.html
+++ b/templates/includes/_header_login.html
@@ -27,7 +27,7 @@
 <div class="service-top">
     <div class="width float-cont">
         <div class="fleft">
-            <a href=""class="city"><span class="city-icon"></span>Мой город: <span class="underline">Москва</span></a>
+            <a href="" class="city"><span class="city-icon"></span>Мой город: <span class="underline">Москва</span></a>
         </div>
         <div class="fleft">
             <span class="delivery-icon"></span>Бесплатная доставка от 999
@@ -67,7 +67,7 @@
                     </div>
                     <div class="shop-cart float-cont">
                         <div class="fleft">
-                            <img src="images/ico/cart.png" alt="" class="shop-cart-img"/>
+                            <img src="static/images/upload/cart.png" alt="" class="shop-cart-img"/>
                             <div class="price-cont">
                                 <div class="price">13 890 Р</div>
                                 <div class="fs11">В корзину</div>
@@ -136,22 +136,22 @@
             </div>
         </div>
         <div class="menu-item">
-            <a href="" class="menu-link"><span class="menu-ico menu2"></span><span class="menu-txt">Кошки</span><span class="sh-fix"></a>
+            <a href="" class="menu-link"><span class="menu-ico menu2"></span><span class="menu-txt">Кошки</span><span class="sh-fix"></span></a>
         </div>
         <div class="menu-item">
-            <a href="" class="menu-link"><span class="menu-ico menu3"></span><span class="menu-txt">Грызуны</span><span class="sh-fix"></a>
+            <a href="" class="menu-link"><span class="menu-ico menu3"></span><span class="menu-txt">Грызуны</span><span class="sh-fix"></span></a>
         </div>
         <div class="menu-item">
-            <a href="" class="menu-link"><span class="menu-ico menu4"></span><span class="menu-txt">Рыбки</span><span class="sh-fix"></a>
+            <a href="" class="menu-link"><span class="menu-ico menu4"></span><span class="menu-txt">Рыбки</span><span class="sh-fix"></span></a>
         </div>
         <div class="menu-item">
-            <a href="" class="menu-link"><span class="menu-ico menu5"></span><span class="menu-txt">Птицы</span><span class="sh-fix"></a>
+            <a href="" class="menu-link"><span class="menu-ico menu5"></span><span class="menu-txt">Птицы</span><span class="sh-fix"></span></a>
         </div>
         <div class="menu-item">
-            <a href="" class="menu-link"><span class="menu-ico menu6"></span><span class="menu-txt">Рептилии</span><span class="sh-fix"></a>
+            <a href="" class="menu-link"><span class="menu-ico menu6"></span><span class="menu-txt">Рептилии</span><span class="sh-fix"></span></a>
         </div>
         <div class="menu-item">
-            <a href="" class="menu-link"><span class="menu-ico menu7"></span><span class="menu-txt">Для хозяев</span><span class="sh-fix"></a>
+            <a href="" class="menu-link"><span class="menu-ico menu7"></span><span class="menu-txt">Для хозяев</span><span class="sh-fix"></span></a>
         </div>
         <div class="fright">
             <div class="menu-item no-submenu"><a href="" class="menu-link underline">Топ-20</a></div>
