--- a/templates/index_login.html
+++ b/templates/index_login.html
@@ -3,19 +3,19 @@
 <div class="width promo-width">
 	<div class="promo float-cont">
 		<div class="big-promo">
-			<img src="images/pic/big.jpg" alt=""/>
+			<img src="static/images/pic/big.jpg" alt=""/>
 			<div class="promo-txt">Самый большой<br/>интернет-магазин товаров<br/>для домашних животных</div>
 		</div>
 		<div class="small-promo">
-			<a href="#" class="promo-img" style="background-image: url(images/pic/bn1.png);">
+			<a href="#" class="promo-img" style="background-image: url(static/images/pic/bn1.png);">
 				<div class="promo-txt">Бесплатный<br/>возврат<br/>товаров</div>
 				<span class="go">Перейти</span>
 			</a>
-			<a href="#" class="promo-img" style="background-image: url(images/pic/bn2.png);">
+			<a href="#" class="promo-img" style="background-image: url(static/images/pic/bn2.png);">
 				<div class="promo-txt">Скидки<br/>на товары</div>
 				<span class="go">Перейти</span>
 			</a>
-			<a href="#" class="promo-img" style="background-image: url(images/pic/bn3.png);">
+			<a href="#" class="promo-img" style="background-image: url(static/images/pic/bn3.png);">
 				<div class="promo-txt">Поиск<br/>по породам</div>
 				<span class="go">Перейти</span>
 			</a>
@@ -36,7 +36,7 @@
 			<div class="float-cont">
 				<div class="catalog-item">
 					<div class="catalog-item-img">
-						<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+						<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 					</div>
 					<div class="catalog-item-brand"><a href="">OZ-Pet</a></div>
 					<div class="catalog-item-title"><a href="">Корм универсальный для собак</a></div>
@@ -50,7 +50,7 @@
 			<div class="float-cont">
 				<div class="catalog-item">
 					<div class="catalog-item-img">
-						<a href=""><img src="images/upload/c4.jpg" alt=""/></a>
+						<a href=""><img src="static/images/upload/c4.jpg" alt=""/></a>
 					</div>
 					<div class="catalog-item-brand"><a href="">Pedigree Home</a></div>
 					<div class="catalog-item-title"><a href="">Миска красная пластмассовая, D = 35 см</a></div>
@@ -88,7 +88,7 @@
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
-					<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+					<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 				</div>
 				<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 				<div class="catalog-item-title"><a href="">Adult Neutered Small Dog, корм для собак мелких пород</a></div>
@@ -126,7 +126,7 @@
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
-					<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+					<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 				</div>
 				<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 				<div class="catalog-item-title"><a href="">Adult Neutered Small Dog, корм для собак мелких пород</a></div>
@@ -164,7 +164,7 @@
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
-					<a href=""><img src="images/upload/c3.jpg" alt=""/></a>
+					<a href=""><img src="static/images/upload/c3.jpg" alt=""/></a>
 				</div>
 				<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 				<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков, живущих в городских...</a></div>
@@ -202,7 +202,7 @@
 					<span class="qv"></span>Быстрый просмотр
 				</div>
 				<div class="catalog-item-img">
-					<a href=""><img src="images/upload/c4.jpg" alt=""/></a>
+					<a href=""><img src="static/images/upload/c4.jpg" alt=""/></a>
 				</div>
 				<div class="catalog-item-brand"><a href="">Pedigree Dentastix</a></div>
 				<div class="catalog-item-title"><a href="">Лакомство для собак для ухода за зубами</a></div>
@@ -242,10 +242,10 @@
 	<div class="float-cont">
 		<div class="fleft big-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="images/ico/dog1.png" alt="" class="title-ico"/><span class="section-title-txt right">собак</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/dog1.png" alt="" class="title-ico"/><span class="section-title-txt right">собак</span>
 			</div>
 			
-			<div class="section-body" style="background-image: url(images/pic/dog.jpg);">
+			<div class="section-body" style="background-image: url(static/images/pic/dog.jpg);">
 				<div class="col fleft">
 					<div class="col-title">Подразделы</div>
 					<ul>
@@ -275,10 +275,10 @@
 
 		<div class="fright big-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="images/ico/cat1.png" alt="" class="title-ico"/><span class="section-title-txt right">кошек</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/cat1.png" alt="" class="title-ico"/><span class="section-title-txt right">кошек</span>
 			</div>
 			
-			<div class="section-body" style="background-image: url(images/pic/cat.jpg);">
+			<div class="section-body" style="background-image: url(static/images/pic/cat.jpg);">
 				<div class="col fleft">
 					<div class="col-title">Подразделы</div>
 					<ul>
@@ -308,10 +308,10 @@
 
 		<div class="fleft small-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="images/ico/rodent1.png" alt="" class="title-ico"/><span class="section-title-txt right">грызунов</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/rodent1.png" alt="" class="title-ico"/><span class="section-title-txt right">грызунов</span>
 			</div>
 			
-			<div class="section-body" style="background-image: url(images/pic/rodent.jpg);">
+			<div class="section-body" style="background-image: url(static/images/pic/rodent.jpg);">
 				<div class="col">
 					<ul>
 						<li><a href="">Корма</a></li>
@@ -327,10 +327,10 @@
 
 		<div class="fleft small-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="images/ico/fish1.png" alt="" class="title-ico"/><span class="section-title-txt right">рыбок</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/fish1.png" alt="" class="title-ico"/><span class="section-title-txt right">рыбок</span>
 			</div>
 			
-			<div class="section-body" style="background-image: url(images/pic/fish.jpg);">
+			<div class="section-body" style="background-image: url(static/images/pic/fish.jpg);">
 				<div class="col">
 					<ul>
 						<li><a href="">Корма</a></li>
@@ -346,10 +346,10 @@
 
 		<div class="fleft small-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="images/ico/bird1.png" alt="" class="title-ico"/><span class="section-title-txt right">птиц</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/bird1.png" alt="" class="title-ico"/><span class="section-title-txt right">птиц</span>
 			</div>
 			
-			<div class="section-body" style="background-image: url(images/pic/bird.jpg);">
+			<div class="section-body" style="background-image: url(static/images/pic/bird.jpg);">
 				<div class="col">
 					<ul>
 						<li><a href="">Корма</a></li>
@@ -365,10 +365,10 @@
 
 		<div class="fright small-section">
 			<div class="section-title">
-				<span class="section-title-txt">Все для</span><img src="images/ico/reptile1.png" alt="" class="title-ico"/><span class="section-title-txt right">рептилий</span>
+				<span class="section-title-txt">Все для</span><img src="static/images/ico/reptile1.png" alt="" class="title-ico"/><span class="section-title-txt right">рептилий</span>
 			</div>
 			
-			<div class="section-body" style="background-image: url(images/pic/reptile.jpg);">
+			<div class="section-body" style="background-image: url(static/images/pic/reptile.jpg);">
 				<div class="col">
 					<ul>
 						<li><a href="">Корма</a></li>
@@ -386,25 +386,25 @@
 	<div class="float-cont">
 		<div class="sh-box adv-box">
 			<div class="box-inner">
-				<img src="images/ico/adv1.png" alt="" class="adv"/>
+				<img src="static/images/upload/adv1.png" alt="" class="adv"/>
 				<div class="adv-txt">Бесплатная<br/>доставка по<br/>Москве от 999 руб!</div>
 			</div>
 		</div>
 		<div class="sh-box adv-box">
 			<div class="box-inner">
-				<img src="images/ico/adv2.png" alt="" class="adv"/>
+				<img src="static/images/upload/adv2.png" alt="" class="adv"/>
 				<div class="adv-txt">Система бонусов<br/>и скидок!</div>
 			</div>
 		</div>
 		<div class="sh-box adv-box">
 			<div class="box-inner">
-				<img src="images/ico/adv3.png" alt="" class="adv"/>
+				<img src="static/images/upload/adv3.png" alt="" class="adv"/>
 				<div class="adv-txt">Бесплатный<br/>возврат</div>
 			</div>
 		</div>
 		<div class="sh-box adv-box fright">
 			<div class="box-inner">
-				<img src="images/ico/adv4.png" alt="" class="adv"/>
+				<img src="static/images/upload/adv4.png" alt="" class="adv"/>
 				<div class="adv-txt">Удобный поиск<br/>по породам</div>
 			</div>
 		</div>
@@ -430,28 +430,28 @@
 		</div>
 		<div class="help-cont">
 			<div class="sh-box help-box">
-				<img src="images/pic/help1.jpg" alt=""/>
+				<img src="static/images/pic/help1.jpg" alt=""/>
 				<div class="help-txt">
 					<div class="help-txt-title">Онлайн-консультант</div>
 					<a href="">Чат с менеджером</a>
 				</div>
 			</div>
 			<div class="sh-box help-box">
-				<img src="images/pic/help2.jpg" alt=""/>
+				<img src="static/images/pic/help2.jpg" alt=""/>
 				<div class="help-txt">
 					<div class="help-txt-title">Обратный звонок</div>
 					<a href="">Заказать</a>
 				</div>
 			</div>
 			<div class="sh-box help-box">
-				<img src="images/pic/help3.jpg" alt=""/>
+				<img src="static/images/pic/help3.jpg" alt=""/>
 				<div class="help-txt">
 					<div class="help-txt-title">Хотите вернуть покупку</div>
 					<a href="">Инструкция по возврату</a>
 				</div>
 			</div>
 			<div class="sh-box help-box">
-				<img src="images/pic/help4.jpg" alt=""/>
+				<img src="static/images/pic/help4.jpg" alt=""/>
 				<div class="help-txt">
 					<div class="help-txt-title">Где мой заказ?</div>
 					<a href="">Узнать статус заказа</a>
@@ -466,28 +466,28 @@
 			<div class="link-small"><a href="" class="underline">Все записи</a></div>
 			<div class="float-cont">
 				<div class="blog-short-item">
-					<a href="" class="blog-short-img"><img src="images/upload/b1.jpg" alt=""/></a>
+					<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
 					<div class="blog-short-date">15 декабря 2015</div>
 					<div class="blog-short-title"><a href="">Выбираем корм для щенка</a></div>
 					<div class="blog-short-txt">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
 				</div>
 
 				<div class="blog-short-item">
-					<a href="" class="blog-short-img"><img src="images/upload/b1.jpg" alt=""/></a>
+					<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
 					<div class="blog-short-date">15 декабря 2015</div>
 					<div class="blog-short-title"><a href="">Дрессировка собаки - с какого возраста начать...</a></div>
 					<div class="blog-short-txt">Как правильно выбрать корм: в зависимости от породы, возраста и активности вашего щенка.</div>
 				</div>
 
 				<div class="blog-short-item">
-					<a href="" class="blog-short-img"><img src="images/upload/b1.jpg" alt=""/></a>
+					<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
 					<div class="blog-short-date">15 декабря 2015</div>
 					<div class="blog-short-title"><a href="">Сбалансированное питание для маленьких собак</a></div>
 					<div class="blog-short-txt">Маленькие собаки нуждаются в особом питании. Мы хотим поделиться нашим опытом с вами!</div>
 				</div>
 
 				<div class="blog-short-item mr0">
-					<a href="" class="blog-short-img"><img src="images/upload/b1.jpg" alt=""/></a>
+					<a href="" class="blog-short-img"><img src="static/images/upload/b1.jpg" alt=""/></a>
 					<div class="blog-short-date">15 декабря 2015</div>
 					<div class="blog-short-title"><a href="">Совместная жизнь щенка и котенка</a></div>
 					<div class="blog-short-txt">Этот текст стоит ограничить в админке, либо не ограничивать совсем. Пусть здесь будет текста столько, сколько считает нужным контент-менеджер.</div>
