--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -119,7 +119,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">OZ-Pet</a></div>
 								<div class="catalog-item-title"><a href="">Корм универсальный для собак</a></div>
@@ -157,7 +157,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -195,7 +195,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -233,7 +233,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c3.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c3.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -271,7 +271,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -309,7 +309,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -347,7 +347,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -385,7 +385,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c3.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c3.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
@@ -423,7 +423,7 @@
 									<span class="qv"></span>Быстрый просмотр
 								</div>
 								<div class="catalog-item-img">
-									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+									<a href=""><img src="static/images/upload/c2.jpg" alt=""/></a>
 								</div>
 								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
 								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
