--- a/static/scss/_colors.scss
+++ b/static/scss/_colors.scss
@@ -1,12 +1,19 @@
 $color-white: #fff;
 $color-black: #000;
 $color-orange: #ffbf3f;
+$color-blue: #17b6e8;
+$color-brown: #886622;
+$color-grey: #d9d9d9;
 $color-grey-light: #eceaea;
 
+$color-bg-blue: #c9f3ff;
 $color-bg-grey: #f7f7f7;
+
+$color-border-orange: #e78800;
 
 $color-link-black: #231f20;
 $color-link-blue: #35c1ea;
-$color-link-brown: #886622;
 
 $color-text-grey: #787d82;
+
+$color-bxslider-grey: #dedede;
