--- a/static/scss/_content.scss
+++ b/static/scss/_content.scss
@@ -6,3 +6,11 @@ body {
   margin: auto;
   padding: 0 20px;
 }
+.sidebar {
+  float: left;
+  width: 220px;
+}
+.right-content {
+  float: right;
+  width: 700px;
+}
